Adding Slugsidian plugin

--- a/02.Setting Up/02.02.Plugins/02.02.02.00.community-plugins.md
+++ b/02.Setting Up/02.02.Plugins/02.02.02.00.community-plugins.md
@@ -1,10 +1,12 @@
 ### 02.02.02 - Community Plugins
 
+![[02.02.02.01.Templater]]
+
+![[02.02.02.02.Dataview]]
+
 Advanced Tables
 
 Better Word Count
-
-Dataview
 
 Day Planner?
 
