--- a/02.Setting Up/02.02.Plugins/02.02.02.02.Dataview.md
+++ b/02.Setting Up/02.02.Plugins/02.02.02.02.Dataview.md
@@ -1,6 +1,6 @@
-#### Dataview
+#### 02.02.02.02 - Dataview
 
-This has to be the most powerful plugin of the bunch.
+This has to be the second most powerful plugin of the bunch.
 
 Here’s a complete list of all the data that Dataview creates, borrowed [from the documentation](https://blacksmithgu.github.io/obsidian-dataview/annotation/metadata-pages/):
 
